--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <div id="app">
+      <div class="panel scores"></div>
+      <div class="panel result"></div>
+      <div class="panel buttons"></div>
+      <div class="panel logs"></div>
 
     </div>
     <script src="app.js"></script>
