--- a/index.html
+++ b/index.html
@@ -4,11 +4,30 @@
   <meta charset="UTF-8">
   <title>Matador de Monstro</title>
   <link rel="stylesheet" href="style.css">
-  <script src="https://unpkg.com/vue"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.0"></script>
 </head>
 <body>
     <div id="app">
-      <div class="panel scores"></div>
+      <div class="panel scores">
+        <div class="score">
+          <h1>Jogador</h1>
+          <div class="life-bar">
+            <div class="life"
+              :class="{danger: playerLife < 20}"
+              :style="{width: playerLife + '%'}"></div>
+          </div>
+          <div> {{ playerLife }}% </div>
+        </div>
+        <div class="score">
+          <h1>Monstro</h1>
+          <div class="life-bar">
+            <div class="life"
+              :class="{danger: monsterLife < 20}"
+              :style="{width: monsterLife + '%'}"></div>
+          </div>
+          <div> {{ monsterLife }}% </div>
+        </div>
+      </div>
       <div class="panel result"></div>
       <div class="panel buttons"></div>
       <div class="panel logs"></div>
