--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
       </div>
       <div class="panel buttons">
         <template v-if="running">
-          <button class="btn attack">Ataque</button>
-          <button class="btn espcial-attack">Atk Especial</button>
+          <button @click="attack(false)"
+          class="btn attack">Ataque</button>
+          <button @click="attack(true)"
+          class="btn espcial-attack">Atk Especial</button>
           <button class="btn heal">Curar</button>
           <button @click="running = false"
           class="btn give-up">Desistir</button>
